[gd_scene load_steps=4 format=3 uid="uid://cjqxmxc06bvsm"]

[ext_resource type="Script" uid="uid://bf7scf1u3n4c3" path="res://scripts/game_over_screen.gd" id="1_iwahs"]
[ext_resource type="PackedScene" uid="uid://cwhtfvdos2uo7" path="res://scenes/play_button.tscn" id="2_61w2s"]
[ext_resource type="Texture2D" uid="uid://butjhu7djcfap" path="res://assets/logo.png" id="3_jw6e5"]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_iwahs")

[node name="Label" type="Label" parent="."]
offset_left = -47.0
offset_top = 32.0
offset_right = 59.0
offset_bottom = 55.0
text = "GAME OVER!"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -104.0
offset_top = 57.0
offset_right = 112.0
offset_bottom = 80.0
text = "Your score: 0"
horizontal_alignment = 1

[node name="TryAgainButton" parent="." instance=ExtResource("2_61w2s")]
offset_top = 86.0
offset_bottom = 117.0
text = "Play again
"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = -45.0
offset_top = 122.0
offset_right = 51.0
offset_bottom = 153.0
text = "Main menu
"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(2.00002, -63)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_jw6e5")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="button_down" from="MainMenuButton" to="." method="_onMainMenuBtnClicked"]
